--- a/infrastructure/cloudwatch-config.json
+++ b/infrastructure/cloudwatch-config.json
@@ -20,8 +20,8 @@
             "retention_in_days": 14
           },
           {
-            "file_path": "/var/log/application.log",
-            "log_group_name": "application",
+            "file_path": "/home/ec2-user/app/tmp/pnmp_java_script_express/logs/combined.log",
+            "log_group_name": "cw22",
             "log_stream_name": "{instance_id}",
             "retention_in_days": 14
           }
